2003-11-12  Miguel de Icaza  <miguel@ximian.com>

	* driver.cs: We do not support error 2007.

2003-11-12 Jackson Harper <jackson@ximian.com>

	* driver.cs: Use corlib.dll or mscorlib.dll when looking up the
	system directory. Also use the full file name so users can
	libraries names mscorlib-o-tron.dll in a non system dir.
	
2003-11-10  Martin Baulig  <martin@ximian.com>

	* typemanager.cs (TypeManager.ResolveExpressionTypes): Removed.
	(TypeManager.InitCoreTypes): Initialize them here, but instead of
	calling `ResolveType()' on them, directly assign their `Type'.

2003-11-08  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.GetClassBases): Use TypeExpr's for the
	return value and the `out parent' parameter.
	(TypeContainer.DefineType): Moved the CS0644 check into
	GetClassBases().  Don't pass the interface types to the
	`builder.DefineType()'/`builder.DefineNestedType()', but resolve
	them later and then call `TypeBuilder.AddInterfaceImplementation()'.

	* ecore.cs (TypeExpr.IsAttribute): New property.
	(TypeExpr.GetInterfaces): New method.

	* interface.cs (Interface.GetInterfaceTypeByName): Return a
	TypeExpr instead of a Type.
	(Interface.GetInterfaceBases): Return TypeExpr's instead of Type's.
	(Interface.DefineType): Don't pass the interface types to the
	`builder.Definetype()'/`builder.DefineNestedType()', but resolve
	them later and then call `TypeBulider.AddInterfaceImplementation()'.

	* typemanager.cs (TypeManager.AddUserType): Take a `TypeExpr[]'
	instead of a `Type[]'.
	(TypeManager.RegisterBuilder): Likewise.
	(TypeManager.AddUserInterface): Likewise.
	(TypeManager.ExpandInterfaces): Take a `Type[]' instead of a
	`Type[]' and also return a `TypeExpr[]'.
	(TypeManager.GetInterfaces): Return a `TypeExpr[]'.

2003-11-08  Martin Baulig  <martin@ximian.com>

	* decl.cs (DeclSpace.ResolveTypeExpr): Return a TypeExpr, not an
	Expression.	

2003-11-08  Martin Baulig  <martin@ximian.com>

	* decl.cs (DeclSpace.GetTypeResolveEmitContext): Call